--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -16,8 +16,12 @@
     Share
   </button>
 
-</div>
 
+<app-product-alerts
+  [product]="product">
+</app-product-alerts>
+
+</div>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
